Migrate to Java 25, start as standalone spring boot application